Added skeleton to project.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,52 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dempsey Portfolio</title>
+    <link rel="stylesheet" type ='text/css' href="./css/index.css"
+</head>
 <body>
-  <h1>Welcome to my website!</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
-</body>
+    <header>
+        <h1 class ='logo'>insert LOGO</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
+    <main>
+        <section>
+            <h2>Main Body Information</h2>
+            <p>Your content here.</p>
+        </section>
+    </main>
+    <div class="toc">
+      <section>
+        <h3>Table of Contents</h3>
+        <ul>
+          <li>Item 1</li>
+          <li>Item 2</li>
+          <li>Item 3</li>
+        </ul>
+      </section>
+    </div>
+    <div class="sectionsArea">
+      <div class="sections">
+        <div class="images"><img src='./resources/geometry1.jpeg'/></div>
+        <div class="section">Section 1</div>
+      </div>
+      <div class="sections">
+        <div class="section">Section 2</div>
+        <div class="images"><img src='./resources/geometry2.jpeg'/></div>
+      </div>
+    </div>
+
+    <footer>
+        <p>&copy; 2024 Dempsey</p>
+    </footer>
+</body>
 </html>
