--- a/index.html
+++ b/index.html
@@ -1,52 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dempsey Portfolio</title>
-    <link rel="stylesheet" type ='text/css' href="./css/index.css"
-</head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dempsey Portfolio</title>
+  <link rel="stylesheet" type='text/css' href="./css/index.css" </head>
+
 <body>
-    <header>
-        <h1 class ='logo'>insert LOGO</h1>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+  <header>
+    <h1 class='logo'>LOGO</h1>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About Me</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <main>
-        <section>
-            <h2>Main Body Information</h2>
-            <p>Your content here.</p>
-        </section>
-    </main>
-    <div class="toc">
-      <section>
-        <h3>Table of Contents</h3>
+  <main>
+    <img id=''>Insert Image of Self or something equivalant
+    <p>I go by Dempsey online</p>
+    <h1>Hey, I'm Duncan.</h1>
+
+    <p>
+      I have been programming for close to 7 years now.
+      I started in high school and have been working on it since.
+    </p>
+    <div class="known">
+      <h2>Knowledgable In:</h2>
+      <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Some JavaScript</li>
+      </ul>
+    </div>
+    <div class="working">
+      <h2>Working On:</h2>
         <ul>
-          <li>Item 1</li>
-          <li>Item 2</li>
-          <li>Item 3</li>
+          <li>More JavaScript</li>
         </ul>
-      </section>
     </div>
-    <div class="sectionsArea">
-      <div class="sections">
-        <div class="images"><img src='./resources/geometry1.jpeg'/></div>
-        <div class="section">Section 1</div>
-      </div>
-      <div class="sections">
-        <div class="section">Section 2</div>
-        <div class="images"><img src='./resources/geometry2.jpeg'/></div>
-      </div>
-    </div>
+    </section>
+  </main>
 
-    <footer>
-        <p>&copy; 2024 Dempsey</p>
-    </footer>
+  <!--
+  <div class="sectionsArea">
+    <div class="sections">
+      <div class="images"><img src='./resources/geometry1.jpeg' /></div>
+      <div class="section">Section 1</div>
+    </div>
+    <div class="sections">
+      <div class="section">Section 2</div>
+      <div class="images"><img src='./resources/geometry2.jpeg' /></div>
+    </div>
+  </div>
+
+-->
+  <footer>
+    <p>&copy; 2024 Dempsey</p>
+  </footer>
 </body>
+
 </html>
