Added info to index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <main>
     <img id=''>Insert Image of Self or something equivalant
-    <p>I go by Dempsey online</p>
+    <p>I go by Dempsey.</p>
     <h1>Hey, I'm Duncan.</h1>
 
     <p>
@@ -39,7 +39,8 @@
     <div class="working">
       <h2>Working On:</h2>
         <ul>
-          <li>More JavaScript</li>
+          <li>Web APIs</li>
+          <li>Web Apps</li>
         </ul>
     </div>
     </section>
